kubernetes/Deployment_node.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vpt-node-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: vpt-node
    spec:
      containers:
      - name: vpt-node
        image: ssp25/vpt-web-node:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
