kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ssp-web-app
spec:
  replicas: 1
  template:
    metadata:
      name: ssp-web-app
      labels:
        app: ssp-web-app
      namespace: ssp-dev
    spec:
      containers:
        - name: ssp-web-app
          image: ssp25/ssp-web-app:latest
          ports:
            - containerPort: 8080
              hostPort: 4040
      imagePullSecrets:
        - name: ssp25
