kubernetes/Service_node.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpt-svc-node
  labels:
    app: vpt-node
spec:
  selector:
    app: vpt-node
  ports:
  - port: 8080
    protocol: TCP
    nodePort: 30062
  type: LoadBalancer
