kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-ssp-web-app
  labels:
    app: ssp-web-app
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ssp-web-app
